# product-portfolio-rag

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.chroma/: chroma.sqlite3
.claude/: settings.local.json
.claude/skills/improve-architecture/: SKILL.md
.claude/skills/interview/: SKILL.md
.claude/skills/prd-to-issues/: SKILL.md
.claude/skills/write-a-prd/: SKILL.md
data/: applications.json  products.json
docs/agent/: api.md  backend.md  data-model.md  deployment.md  frontend.md
docs/overview/: decisions.md  dependencies.md
scripts/: deploy-mac.sh  deploy.ps1  ingest.py  setup_auth-mac.sh  setup_auth.ps1  start.sh  validate_data.py
src/api/: main.py  models.py  routes.py
src/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/frontend/src/: App.tsx
src/frontend/src/__tests__/: App.test.tsx  EmbeddingsPage.test.tsx  EmbeddingsQueryBar.test.tsx  EmbeddingsUtils.test.ts  HomePage.test.tsx  Navbar.test.tsx  QueryChips.test.tsx  (+5 more)
src/ingest/: __init__.py  _chunker.py  _joiner.py  _loader.py  chunker.py  indexer.py  ingestor.py  joiner.py  pca.py
src/rag/: generator.py  models.py  prompts.py  retriever.py
src/rag/summary/: adapters.py  ports.py  service.py
tests/: conftest.py  test_api.py  test_data_integrity.py  test_generator.py  test_infra.ps1  test_ingest.py  test_ingestor.py  test_pca.py  test_retriever.py  test_summary_adapters.py  test_summary_service.py  test_validate_data.py
tests/fixtures/: sample_applications.json  sample_products.json
(+19 files in other folders)
